--- a/views/rent_reservation_choose_product.erb
+++ b/views/rent_reservation_choose_product.erb
@@ -7,7 +7,14 @@
 
                         <!-- Car Listing -->
                         <div id="product_listing">
-                        </div>    
+                        </div>
+
+                        <% if booking_item_family and booking_item_family.multiple_items? %>
+                        <br>
+                        <div class="pull-right">
+                          <a class="btn btn-theme btn-theme-dark" href="<%=format_url_with_language("/reserva/completar")%>"><%=t.front_end_reservation.next%></a>
+                        </div>
+                        <% end %>
                         
 
                     </div>
@@ -22,53 +29,63 @@
                                 <!-- Search form -->
                                 <div class="form-search light">
                                     <form action="<%=format_url_with_language('/reserva/producto')%>" method="POST">
+                                        <% if booking_item_family and booking_item_family.pickup_return_place %>
                                         <div class="form-group has-icon has-label">
-                                            <label for="formSearchUpLocation3">Lugar entrega</label>
+                                            <label for="formSearchUpLocation3"><%=t.front_end_reservation.pickup_place%></label>
                                                 <select name="pickup_place" id="pickup_place"
                                                       class="selectpicker input-price" data-live-search="true" data-width="100%"
-                                                    data-toggle="tooltip" title="Select">
+                                                    data-toggle="tooltip" title="Select" data-container="body">
                                                 </select>
                                             <span class="form-control-icon"><i class="fa fa-map-marker"></i></span>
                                         </div>
 
                                         <div class="form-group has-icon has-label">
-                                            <label for="formSearchOffLocation3">Lugar devolución</label>
+                                            <label for="formSearchOffLocation3"><%=t.front_end_reservation.return_place%></label>
                                               <select name="return_place" id="return_place"
                                                       class="selectpicker input-price" data-live-search="true" data-width="100%"
-                                                      data-toggle="tooltip" title="Select">
+                                                      data-toggle="tooltip" title="Select" data-container="body">
                                               </select>
                                             <span class="form-control-icon"><i class="fa fa-map-marker"></i></span>
                                         </div>
+                                        <% end %>
 
                                         <div class="form-group has-icon has-label">
-                                            <label for="date_from">Fecha entrega</label>
+                                            <label for="date_from"><%=t.front_end_reservation.date_from%></label>
                                             <input type="text" class="form-control" id="date_from" name="date_from" placeholder="dd/mm/yyyy">
                                             <span class="form-control-icon"><i class="fa fa-calendar"></i></span>
                                         </div>
 
+                                        <% if booking_item_family and booking_item_family.time_to_from %>
                                         <div class="form-group has-icon has-label selectpicker-wrapper">
-                                            <label>Hora entrega</label>
+                                            <label><%=t.front_end_reservation.time_from%></label>
                                             <select
                                                     class="selectpicker input-price" data-live-search="true" data-width="100%" id="time_from" name="time_from"
-                                                    data-toggle="tooltip" title="Select">
+                                                    data-toggle="tooltip" title="Select" data-container="body">
                                             </select>
                                             <span class="form-control-icon"><i class="fa fa-clock-o"></i></span>
                                         </div>
+                                        <% elsif booking_item_family and !booking_item_family.time_to_from %>
+                                        <input type="hidden" name="time_from" value="<%=booking_item_family.time_start%>"/>
+                                        <% end %>
 
                                         <div class="form-group has-icon has-label">
-                                            <label for="formSearchUpDate3">Fecha recogida</label>
+                                            <label for="formSearchUpDate3"><%=t.front_end_reservation.date_to%></label>
                                             <input type="text" class="form-control" id="date_to" name="date_to" placeholder="dd/mm/yyyy">
                                             <span class="form-control-icon"><i class="fa fa-calendar"></i></span>
                                         </div>
 
+                                        <% if booking_item_family and booking_item_family.time_to_from %>
                                         <div class="form-group has-icon has-label selectpicker-wrapper">
-                                            <label>Hora recogida</label>
+                                            <label><%=t.front_end_reservation.time_to%></label>
                                             <select
                                                     class="selectpicker input-price" data-live-search="true" data-width="100%" id="time_to" name="time_to"
-                                                    data-toggle="tooltip" title="Select">
+                                                    data-toggle="tooltip" title="Select" data-container="body">
                                             </select>
                                             <span class="form-control-icon"><i class="fa fa-clock-o"></i></span>
                                         </div>
+                                        <% elsif booking_item_family and !booking_item_family.time_to_from %>
+                                          <input type="hidden" name="time_to" value="<%=booking_item_family.time_end%>"/>
+                                        <% end %>
 
                                         <% if booking_item_family.driver and booking_driver_min_age_rules %>
                                           <hr>
@@ -77,7 +94,7 @@
                                           </div>
                                         <% end %>
 
-                                        <button type="submit" id="formSearchSubmit3" class="btn btn-submit btn-theme btn-theme-dark btn-block">Actualizar</button>
+                                        <button type="submit" id="formSearchSubmit3" class="btn btn-submit btn-theme btn-theme-dark btn-block"><%=t.front_end_reservation.update%></button>
 
                                     </form>
                                 </div>
@@ -86,7 +103,7 @@
                         </div>
                         <!-- /widget -->
                         <!-- widget helping center -->
-                        <div class="widget shadow widget-helping-center">
+                        <!--div class="widget shadow widget-helping-center">
                             <h4 class="widget-title">Atención al cliente</h4>
                             <div class="widget-content">
                                 <p>Vivamus eget nibh. Etiam cursus leo vel metus. Nulla facilisi. Aenean nec eros.</p>
@@ -96,7 +113,7 @@
                                     <a href="#" class="btn btn-block btn-theme btn-theme-dark">Centro de soporte</a>
                                 </div>
                             </div>
-                        </div>
+                        </div-->
                         <!-- /widget helping center -->
                     </aside>
                     <!-- /SIDEBAR -->
@@ -109,22 +126,49 @@
         <script type="text/tpml" id="script_detailed_product">
 
             <div class="thumbnail no-border no-padding thumbnail-car-card clearfix">
-               <div class="media">
-                  <img src="<%%=product.photo%>" style="min-height:202px" alt=""/>
+               <div class="media" style="line-height:215px">
+                  <img src="<%%=product.photo%>" alt=""/>
                </div>
                <div class="caption">
                   <h4 class="caption-title"><%%=product.name%></h4>
                   <h5 class="caption-title-sub"><%%=new Number(product.price).toFixed(2)%>€</h5>
-                  <div class="caption-text"><%%=product.short_description%></div>
-                  <table class="table">
-                     <tr>
-                       <%% if (product.availability) { %>
-                       <td class="buttons"><a class="btn btn-theme btn-choose-product" href="#" data-product="<%%=product.code%>">Seleccionar</a></td>
-                       <%% } else { %>
-                       <td class="not-available"><%=t.front_end_reservation.not_available%></td> 
-                       <%% } %>
-                     </tr>
-                  </table>
+                  <div class="caption-text">
+                    <%%=product.description%>
+                  </div>
+
+                  <% if booking_item_family and booking_item_family.frontend == :shopcart %>
+                      <%% if (product.availability) { %>
+                      <div class="car-listing-selector">
+                        <select class="selectpicker select-choose-product input pull-right" data-value="<%%=product.code%>" data-live-search="false"
+              data-toggle="tooltip" title="Select" data-container="body">>
+                              <%% for (var idx=0;idx<=(product.stock-product.busy);idx++) { %>
+                              <option value="<%%=idx%>"
+                              <%% if (productsInShoppingCart[product.code] && productsInShoppingCart[product.code] == idx) { %>
+                              selected="selected"
+                              <%%}%>><%%=idx%> (<%%=new Number(product.price * idx).toFixed(2)%> €)</option>
+                              <%% } %>
+                          </select>
+                        </div>
+                      <%% } else { %>
+                        <table class="table">
+                          <tr>
+                             <td class="not-available"><%=t.front_end_reservation.not_available%></td>
+                          </tr>
+                        </table>
+                      <%% } %>
+                  <% else %>
+                    <table class="table">
+                       <tr>
+                         <%% if (product.availability) { %>
+                         <td class="buttons">
+                            <a class="btn btn-theme btn-choose-product" href="#" data-product="<%%=product.code%>"><%=t.front_end_reservation.select%></a>
+                         </td>
+                         <%% } else { %>
+                         <td class="not-available"><%=t.front_end_reservation.not_available%></td>
+                         <%% } %>
+                       </tr>
+                    </table>
+                  <% end %>
                 </div>
               </div>
 
