--- a/views/rent_reservation_choose_product.js.erb
+++ b/views/rent_reservation_choose_product.js.erb
@@ -87,6 +87,22 @@ require(['jquery', 'YSDRemoteDataSource','YSDSelectSelector',
 
     },
 
+    // ------------ Products information detail ------------------------
+
+    getShoppingCartProducts: function() { /** Get an object representation of extras **/
+
+      var shoppingCartProducts = {};
+
+      if (this.shopping_cart != null) {
+        for (var idx=0;idx<this.shopping_cart.items.length;idx++) {
+           shoppingCartProducts[this.shopping_cart.items[idx].item_id] = this.shopping_cart.items[idx].quantity;
+        }
+      }
+
+      return shoppingCartProducts;
+
+    },
+
     // -------------- Shopping cart ----------------------------
 
     isShoppingCartData: function() {
@@ -175,11 +191,15 @@ require(['jquery', 'YSDRemoteDataSource','YSDSelectSelector',
 
     // -------------- Select product ----------------------------
 
-    buildSelectProductDataParams: function(productCode) {
+    buildSelectProductDataParams: function(productCode, productQuantity) {
 
         var data = {
             product: productCode
         };
+
+        if (productQuantity) {
+          data.quantity = productQuantity;
+        }
 
         var jsonData = encodeURIComponent(JSON.stringify(data));
 
@@ -187,18 +207,20 @@ require(['jquery', 'YSDRemoteDataSource','YSDSelectSelector',
 
     },
 
-    selectProduct: function(productCode) { /* Set the product */
+    selectProduct: function(productCode, productQuantity) { /* Set the product */
 
        $.ajax({
                type: 'POST',
                url : '/api/booking/frontend/shopping-cart/set-product',
-               data: this.buildSelectProductDataParams(productCode),
+               data: this.buildSelectProductDataParams(productCode, productQuantity),
                dataType : 'json',
                contentType : 'application/json; charset=utf-8',
                success: function(data, textStatus, jqXHR) {
                  
                  model.shopping_cart = data.shopping_cart;
+                 <% if booking_item_family and !booking_item_family.multiple_items? %>
                  window.location.href= '<%=format_url_with_language("/reserva/completar")%>';
+                 <% end %>
 
                },
                error: function(data, textStatus, jqXHR) {
@@ -225,13 +247,25 @@ require(['jquery', 'YSDRemoteDataSource','YSDSelectSelector',
 
     },
 
+    productQuantityChanged: function(productCode, newQuantity) {
+
+      model.selectProduct(productCode, newQuantity);
+
+    },
+
     dateFromChanged: function() {
 
       var dateFrom = $('#date_from').datepicker('getDate');
       var dateTo = $('#date_from').datepicker('getDate');
-      dateTo.setDate(dateTo.getDate() + model.minDays)
+
+      <% if booking_item_family.cycle_of_24_hours %>
+      dateTo.setDate(dateFrom.getDate() + model.minDays);
+      <% else %>
+      dateTo.setDate(dateFrom.getDate() + (model.minDays - 1));
+      <% end %>
+
       $('#date_to').datepicker('setDate', dateTo );
-      $('#date_to').datepicker('option', 'minDate', dateFrom.add(model.minDays).days());
+      $('#date_to').datepicker('option', 'minDate', dateTo);
 
     }
 
@@ -266,10 +300,10 @@ require(['jquery', 'YSDRemoteDataSource','YSDSelectSelector',
       $('#date_from').datepicker('setDate', '+0'); 
 
       $('#date_to').datepicker({numberOfMonths:1, 
-          minDate: new Date().add(model.minDays).days(),
-            maxDate: new Date().add(365).days(), 
-            dateFormat: 'dd/mm/yy'}, locale);
-      $('#date_to').datepicker('setDate', '+'+model.minDays);
+          minDate: <% if booking_item_family.cycle_of_24_hours %>new Date().add(model.minDays).days()<%else%>new Date().add(model.minDays-1).days()<%end%>,
+          maxDate: new Date().add(365).days(),
+          dateFormat: 'dd/mm/yy'}, locale);
+      $('#date_to').datepicker('setDate', <% if booking_item_family.cycle_of_24_hours %>'+'+model.minDays<%else%>'+'+(model.minDays-1)<%end%>);
 
       $('#date_from').bind('change', function() {
            controller.dateFromChanged();
@@ -335,22 +369,32 @@ require(['jquery', 'YSDRemoteDataSource','YSDSelectSelector',
 
     showShoppingCart: function() {
 
-        $('#pickup_place').val(model.shopping_cart.pickup_place.replace(/\+/g, ' '));
+  	    // Show the sidebar
+        this.showSideBar();
+
+        // Show the products
+        this.showProducts();
+
+    },
+
+    showSideBar: function() { /** Show the sidebar **/
+
+        $('#pickup_place').val(model.shopping_cart.pickup_place ? model.shopping_cart.pickup_place.replace(/\+/g, ' ') : model.shopping_cart.pickup_place);
         $('#pickup_place').selectpicker('refresh');
-        $('#return_place').val(model.shopping_cart.return_place.replace(/\+/g, ' '));
+        $('#return_place').val(model.shopping_cart.return_place ? model.shopping_cart.return_place.replace(/\+/g, ' ') : model.shopping_cart.return_place);
         $('#return_place').selectpicker('refresh');
 
         if (model.shopping_cart.date_from instanceof Date) {
             var date_from = model.shopping_cart.date_from.getDate() + '/' + (model.shopping_cart.date_from.getMonth()+1)+ '/' + model.shopping_cart.date_from.getFullYear();
         }
-        else if (model.shopping_cart.date_from instanceof String) {
+        else if (typeof model.shopping_cart.date_from === 'string') {
             var date_from = model.shopping_cart.date_from.substring(8,10) + '/' + model.shopping_cart.date_from.substring(5,7) + '/' + model.shopping_cart.date_from.substring(0,4);
         }
 
         if (model.shopping_cart.date_to instanceof Date) {
             var date_to = model.shopping_cart.date_to.getDate() + '/' + (model.shopping_cart.date_to.getMonth()+1) + '/' + model.shopping_cart.date_to.getFullYear();
         }
-        else if (model.shopping_cart.date_to instanceof String) {
+        else if (typeof model.shopping_cart.date_to === 'string') {
             var date_to = model.shopping_cart.date_to.substring(8, 10) + '/' + model.shopping_cart.date_to.substring(5, 7) + '/' + model.shopping_cart.date_to.substring(0, 4);
         }
 
@@ -362,21 +406,33 @@ require(['jquery', 'YSDRemoteDataSource','YSDSelectSelector',
         $('#time_to').val(model.shopping_cart.time_to);
         $('#time_to').selectpicker('refresh');
 
-        // Show the products
-        var result = '';
-        for (var idx=0;idx<model.products.length;idx++) {
-            result += tmpl('script_detailed_product')({product:model.products[idx]});
-        }
-        $('#product_listing').html(result);
-
         <% if booking_item_family.driver and booking_driver_min_age_rules %>
         $('#driver_age_rule').html(model.shopping_cart.driver_age_rule_description);
         <% end %>
+    },
 
+    showProducts: function() { /** Show the products **/
+
+        var result = '';
+        for (var idx=0;idx<model.products.length;idx++) {
+            result += tmpl('script_detailed_product')({product:model.products[idx],
+                productsInShoppingCart: model.getShoppingCartProducts()});
+        }
+        $('#product_listing').html(result);
+
+        <% if booking_item_family and booking_item_family.multiple_items? %>
+        $('.select-choose-product').selectpicker();
+        $('.select-choose-product').bind('change', function() {
+            var productCode = $(this).attr('data-value');
+            var productQuantity = $(this).val();
+            controller.productQuantityChanged(productCode, productQuantity);
+        });
+        <% else %>
         // Prepare onclick event to select the product
         $('.btn-choose-product').bind('click', function() {
             controller.selectProductBtnClick($(this).attr('data-product'));
         });
+        <% end %>
 
     }
 
