front-end multi language

--- a/views/rent_reservation_choose_product.erb
+++ b/views/rent_reservation_choose_product.erb
@@ -24,7 +24,7 @@
                     <aside class="col-md-4 sidebar" id="sidebar" style="display: none">
                         <!-- widget -->
                         <div class="widget shadow widget-find-car">
-                            <h4 class="widget-title">Producto</h4>
+                            <h4 class="widget-title"><%=t.front_end_reservation.reservation_summary_title%></h4>
                             <div class="widget-content">
                                 <!-- Search form -->
                                 <div class="form-search light">
