--- a/views/rent_reservation_complete.erb
+++ b/views/rent_reservation_complete.erb
@@ -98,7 +98,7 @@
                             <div>
                               <div class="checkbox pull-left">
                                 <input id="accept" type="checkbox" name="accept" title="Please accept" data-toggle="tooltip" value="checked">
-                                <label for="accept"><%=t.front_end_reservation.conditions_read%></label>
+                                <label for="accept"><%=t.front_end_reservation.conditions_read(format_url_with_language("/renting_conditions"))%></label>
                               </div>
                               <a id="btn_reservation" class="btn btn-theme pull-right btn-reservation-now" href="#"><%=t.front_end_reservation.request_reservation%></a>
                             </div>
@@ -240,9 +240,9 @@
 
 <script type="text/tmpl" id="script_reservation_summary">
   <span></span>
-  <h4 class="widget-title">Detalle de la reserva</h4>
+  <h4 class="widget-title"><%=t.front_end_reservation.reservation_summary_title%></h4>
   <div class="widget-content">
-     <h5 class="widget-title-sub">Entrega</h5>
+     <h5 class="widget-title-sub"><%=t.front_end_reservation.reservation_summary_pickup%></h5>
      <div class="media">
         <span class="media-object pull-left"><i class="fa fa-calendar"></i></span>
         <div class="media-body"><p><%%=new Date(shopping_cart.date_from).toString('d MMMM yyyy')%><% if booking_item_family and booking_item_family.time_to_from %> / <%%=shopping_cart.time_from%><%end%></p></div>
@@ -253,7 +253,7 @@
         <div class="media-body"><p><%%=shopping_cart.pickup_place%></p></div>
      </div>
      <% end %>
-     <h5 class="widget-title-sub">Recogida</h5>
+     <h5 class="widget-title-sub"><%=t.front_end_reservation.reservation_summary_return%></h5>
      <div class="media">
        <span class="media-object pull-left"><i class="fa fa-calendar"></i></span>
        <div class="media-body"><p><%%=new Date(shopping_cart.date_to).toString('d MMMM yyyy')%><% if booking_item_family and booking_item_family.time_to_from %> / <%%=shopping_cart.time_to%><%end%></p></div>
@@ -264,49 +264,49 @@
        <div class="media-body"><p><%%=shopping_cart.return_place%></p></div>
      </div>
      <% end %>
-     <h5 class="widget-title-sub">Precio</h5>
+     <h5 class="widget-title-sub"><%=t.front_end_reservation.reservation_summary_price%></h5>
      <div class="list">
         <ul>
-          <li>Total producto: <span class="pull-right"><%%=new Number(shopping_cart.item_cost).toFixed(2)%>€</span></li>
+          <li><%=t.front_end_reservation.reservation_summary_total_product%>: <span class="pull-right"><%%=new Number(shopping_cart.item_cost).toFixed(2)%>€</span></li>
 
           <%% if (shopping_cart.extras_cost > 0) { %>
-          <li>Total extras: <span class="pull-right"><%%=new Number(shopping_cart.extras_cost).toFixed(2)%>€</span></li>
+          <li><%=t.front_end_reservation.reservation_summary_total_extras%>: <span class="pull-right"><%%=new Number(shopping_cart.extras_cost).toFixed(2)%>€</span></li>
           <%% } %>
 
           <%% if (shopping_cart.time_from_cost > 0) { %>
-          <li>Suplemento hora entrega: <span class="pull-right"><%%=new Number(shopping_cart.time_from_cost).toFixed(2)%>€</span></li>
+          <li><%=t.front_end_reservation.reservation_summary_pickup_time_supplement%>: <span class="pull-right"><%%=new Number(shopping_cart.time_from_cost).toFixed(2)%>€</span></li>
           <%% } %>
 
           <%% if (shopping_cart.pickup_place_cost > 0) { %>
-          <li>Suplemento lugar entrega: <span class="pull-right"><%%=new Number(shopping_cart.pickup_place_cost).toFixed(2)%>€</span></li>
+          <li><%=t.front_end_reservation.reservation_summary_pickup_place_supplement%>: <span class="pull-right"><%%=new Number(shopping_cart.pickup_place_cost).toFixed(2)%>€</span></li>
           <%% } %>
 
           <%% if (shopping_cart.time_to_cost > 0) { %>
-          <li>Suplemento hora devolución: <span class="pull-right"><%%=new Number(shopping_cart.time_to_cost).toFixed(2)%>€</span></li>
+          <li><%=t.front_end_reservation.reservation_summary_return_time_supplement%>: <span class="pull-right"><%%=new Number(shopping_cart.time_to_cost).toFixed(2)%>€</span></li>
           <%% } %>
 
           <%% if (shopping_cart.return_place_cost > 0) { %>
-          <li>Suplemento lugar devolución: <span class="pull-right"><%%=new Number(shopping_cart.return_place_cost).toFixed(2)%>€</span></li>
+          <li><%=t.front_end_reservation.reservation_summary_return_place_supplement%>: <span class="pull-right"><%%=new Number(shopping_cart.return_place_cost).toFixed(2)%>€</span></li>
           <%% } %>
 
           <% if total_cost_includes_deposit %>
           <%% if (shopping_cart.total_deposit > 0) { %>
-          <li>Fianza*: <span class="pull-right"><%%=new Number(shopping_cart.total_deposit).toFixed(2)%>€</span></li>
+          <li><%=t.front_end_reservation.reservation_summary_deposit%>*: <span class="pull-right"><%%=new Number(shopping_cart.total_deposit).toFixed(2)%>€</span></li>
           <%% } %>
           <% end %>
 
-          <li>TOTAL: <span class="pull-right"><%%=new Number(shopping_cart.total_cost).toFixed(2)%>€</span></li>
+          <li><%=t.front_end_reservation.reservation_summary_total%>: <span class="pull-right"><%%=new Number(shopping_cart.total_cost).toFixed(2)%>€</span></li>
 
           <% if !total_cost_includes_deposit %>
           <%% if (shopping_cart.total_deposit > 0) { %>
           <hr>
-          <li>Fianza*: <span class="pull-right"><%%=new Number(shopping_cart.total_deposit).toFixed(2)%>€</span></li>
+          <li><%=t.front_end_reservation.reservation_summary_deposit%>*: <span class="pull-right"><%%=new Number(shopping_cart.total_deposit).toFixed(2)%>€</span></li>
           <%% } %>
           <% end %>
 
 
           <%% if (shopping_cart.total_deposit > 0) { %>
-          <li><small>* La fianza se devolverá tras las devolución del producto</small></li>
+          <li><small>* <%=t.front_end_reservation.reservation_summary_deposit_detail%></small></li>
           <%% } %>
 
         </ul>
@@ -320,23 +320,23 @@
      <% end %>
 
      <div class="button">
-       <a href="/reserva/producto" class="btn btn-block btn-theme btn-theme-dark">Modificar reserva</a>
+       <a href="/reserva/producto" class="btn btn-block btn-theme btn-theme-dark"><%=t.front_end_reservation.modify_reservation%></a>
      </div>
   </div>
 </script>
 
 <!-- Script payment -->
 <script type="text/tmpl" id="script_payment_detail">
-  <h3 class="block-title alt"><i class="fa fa-angle-down"></i>Pago</h3>
+  <h3 class="block-title alt"><i class="fa fa-angle-down"></i><%=t.front_end_reservation.payment_title%></h3>
   <div class="alert alert-success">
-    <p>Para confirmar la reserva se requiere una paga y señal del 20% del importe total de la reserva</p>
+    <p><%=t.front_end_reservation.payment_to_confirm_reservation(20)%></p>
   </div>
   <div class="panel-group payments-options" id="accordion" role="tablist" aria-multiselectable="true">
     <div class="panel panel-default">
       <div class="panel-heading" role="tab" id="headingThree">
         <h4 class="panel-title">
           <a data-payment-method="none" data-toggle="collapse" data-parent="#accordion" href="#collapse2" aria-expanded="false" aria-controls="collapseTwo">
-            <span class="dot"></span> Sólo solicitud de reserva
+            <span class="dot"></span><%=t.front_end_reservation.request_reservation%>
           </a>
         </h4>
       </div>
@@ -347,7 +347,7 @@
           <div class="panel-heading" role="tab" id="headingThree">
               <h4 class="panel-title">
                   <a class="collapsed" data-payment-method="redsys256" data-toggle="collapse" data-parent="#accordion" href="#collapse3" aria-expanded="false" aria-controls="collapseThree">
-                      <span class="dot"></span> Tarjeta de crédito (20% de paga y señal para confirmar reserva)
+                      <span class="dot"></span> <%=t.front_end_reservation.credit_card_payment(20)%>
                   </a>
           <span class="overflowed pull-right">
               <!--img src="assets/img/preview/payments/mastercard-2.jpg" alt=""/>
@@ -364,7 +364,7 @@
           <div class="panel-heading" role="tab" id="heading4">
               <h4 class="panel-title">
                   <a class="collapsed" data-payment-method="paypal_standard" data-toggle="collapse" data-parent="#accordion" href="#collapse4" aria-expanded="false" aria-controls="collapse4">
-                      <span class="dot"></span> PayPal (20% de paga y señal para confirmar reserva)
+                      <span class="dot"></span> <%=t.front_end_reservation.paypal_payment(20)%>
                   </a>
                   <span class="overflowed pull-right">
                      <!--img src="assets/img/preview/payments/paypal-2.jpg" alt=""/-->
